--- a/coolpics/coolpics.css
+++ b/coolpics/coolpics.css
@@ -7,21 +7,62 @@
     --text-dark: #333;
     --text-light: #ebebeb;
     --primary-font: Arial, Helvetica,sans-serif;
-    --secondary-font: Mooli, san-serif;
+    --secondary-font: Mooli, sans-serif;
     }
+
+@media screen and (min-width: 700px) {
+    .gallery {
+      grid-template-columns: 1fr 1fr;
+    }
+    button {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .gallery {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+    ul {
+        display: block;
+    }
+    .hide {
+        display: contents;
+    }
+}
 
 body {
     font-family: var(--primary-font);
     font-size: 1.2em;
     color: var(--text-dark);
+    background-color: var(--text-light);
+    text-align: center;
+    align-items: center;
+    align-content: center;
+    margin: 0;
+    padding: 0;
 }
 
-a:link, a:visited {
+a:link {
     color: var(--accent-color);
+    display: flex;
+    justify-content: center;
 }
 
-header, h1 {
-    font-family: var(--secondary-font)
+a:visited, button {
+    color: var(--text-light);
+}
+
+header, h1, h2 {
+    font-family: var(--secondary-font);
+}
+
+.gallery {
+    grid-template-columns: 1fr;
+}
+
+h2 {
+    font-weight: bolder;
 }
 
 header, footer, a {
@@ -29,7 +70,46 @@ header, footer, a {
     color: var(--text-light);
 }
 
+ul, main {
+    font-size: 16px;
+}
+
 img {
 	max-width: 100%;
     object-fit: cover;
+    border: 5px, solid, white;
+    box-shadow: 5px 5px 10px black;
+}
+
+button {
+    pointer-events: none;
+    background: none;
+    border: none;
+    font-size: 20px;
+}
+
+.hide {
+    display: none;
+}
+
+.viewer {
+    position: fixed;
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    background-color: rgba(0, 0, 0, 0.75);
+    grid-template: 1fr / 1fr 1fr;
+    color: var(--text-light);
+    max-height: 100%;
+    z-index: 10;
+}
+
+.close-viewer {
+    grid-column: 1/2;
+    pointer-events: visible;
+}
+
+.viewer img {
+    grid-column: 2/2;
 }
