--- a/blog/blog.css
+++ b/blog/blog.css
@@ -47,22 +47,15 @@ main {
     display: grid;
     grid-template-columns: 0.5fr 1fr 0.5fr;
     grid-template-rows: auto;
-    grid-template-areas: 
-        "book-post-1 book-post-1 filters"
-        "book-post-2 book-post-2 filters";
+    /* grid-template-areas: 
+        "book-post book-post filters"; */
     gap: 20px;
     margin-top: 30px;
+    grid-auto-rows: minmax(100px, auto);
 }
 
-.book-post-1 {
-    grid-area: book-post-1;
-}
-
-.book-post-2 {
-    grid-area: book-post-2;
-}
-
-.book-post-1, .book-post-2 {
+.book-post {
+    grid-column: 1 / 3;
     display: grid;
     grid-template-columns: 0.5fr 1fr;
     grid-template-rows: 1fr;
@@ -70,8 +63,9 @@ main {
 }
 
 .filters {
-    grid-area: filters;
+    grid-column: 3 / 4;
     text-align: left;
+    top: 0;
 }
 
 .identifiers {
