--- a/sandbox/forms/form-demo.css
+++ b/sandbox/forms/form-demo.css
@@ -33,3 +33,47 @@
   .hide {
     display: none; /* Initially hide the credit card input and label */
   }
+
+  .contact {
+    font-size:1.8em;
+  }
+
+  .contact input,
+  .contact select,
+  .contact textare {
+    width: 100%;
+    margin-bottom: 1em;
+    padding: 1em;
+    font-size: 1.5rem;
+  }
+
+  .contact button {
+    background-color: #4CAF50;
+    padding: 0.5em;
+    font-size:1.5rem;
+
+  }
+
+  label {
+    display: block;
+    margin-bottom: 8px;
+  }
+  
+  input,
+  select,
+  textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    border: 1px solid #ccc; /* Add a border to make it visually consistent */
+    border-radius: 4px;
+  }
+  button {
+    background-color: #4caf50;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
