--- a/recipes/recipes.css
+++ b/recipes/recipes.css
@@ -78,11 +78,12 @@ main {
     flex-direction: column;
 }
 
-h2 {
+h2 a{
     color: var(--text-color);
     font-family: "Arima", Arial;
     line-height: 20px;
     margin-top: 1em;
+    text-decoration: none;
 }
 
 .recipe {
@@ -138,6 +139,10 @@ img {
     max-width: 100%;
 }
 
+.description {
+    display: none;
+}
+
 @media screen and (min-width: 600px) {
     footer {
         flex-flow: row-reverse;
@@ -145,6 +150,7 @@ img {
     }
     .recipe {
         flex-direction: row;
+        flex-wrap: wrap;
     }
     .recipe img {
         width: 60%;
