--- a/recipes/recipes.css
+++ b/recipes/recipes.css
@@ -153,6 +153,11 @@ img {
     display: none;
 }
 
+button {
+    padding: 0;
+    margin: 0;
+}
+
 @media screen and (min-width: 600px) {
     footer {
         flex-flow: row-reverse;
