--- a/second-chance/styles/style.css
+++ b/second-chance/styles/style.css
@@ -111,7 +111,7 @@ nav a:hover {
     margin: 0;
     margin-top: 50px;
 }
-.mySlides.fade {
+.rebuild {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -120,7 +120,7 @@ nav a:hover {
     position: relative;
     margin: auto;
 }
-.mySlides {
+.rebuild {
     display: none;
 }
 .prev, .next {
@@ -143,7 +143,7 @@ nav a:hover {
     border-radius: 3px 0 0 3px;
 }
 .prev:hover, .next:hover {
-    background-color: var(--accent1-color);
+    color: var(--accent2-color);
 }
 .text {
     color: var(--secondary-color);
@@ -156,11 +156,12 @@ nav a:hover {
     text-align: center;
 }
 .numbertext {
-    color: var(--secondary-color);
+    /* color: var(--secondary-color);
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
-    top: 0;
+    top: 0; */
+    display: none;
 }
 .dot {
     cursor: pointer;
@@ -173,9 +174,9 @@ nav a:hover {
     transition: background-color 0.6s ease;
 }
 .active, .dot:hover {
-    background-color: var(--secondary-color);
+    background-color: var(--accent2-color);
 }
-.fade {
+.rebuild {
     animation-name: fade;
     animation-duration: 1.5s;
 }
