--- a/second-chance/styles/style.css
+++ b/second-chance/styles/style.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
+/* Changes Needed:
+Make website responsive (screen sizes wide/small), Change header/navigation with logo/title with links below,
+Split up mission statement, Make header underline instead of green block, Font sizes within Footer.
+Add clickable expansion to image courosel*/
+
+
 * {
     box-sizing: border-box;
 }
