--- a/second-chance/styles/style.css
+++ b/second-chance/styles/style.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 /* Changes Needed:
-Make website responsive (screen sizes wide/small), Split up mission statement, 
-Font sizes within Footer, Add clickable expansion to image courosel*/
+Make website responsive (screen sizes wide/small), 
+Add clickable expansion to image courosel*/
 
 
 * {
@@ -101,6 +101,8 @@ nav a:hover {
     width: 50%;
     text-align: center;
     align-self: center;
+    line-height: 36px;
+    font-size: 28px;
 }
 
 .jeeps_main {
@@ -114,12 +116,26 @@ nav a:hover {
     border: 10px solid var(--accent2-color);
 }
 .contact {
-    display: grid;
-    align-content: center;
-    grid-template: 1fr / 250px 1fr 250px 1fr;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 0.75em;
+    justify-content: center;
+    
 }
+
+.contact div {
+    display: flex;
+    margin-right: 20px;
+}
+
+.contact p {
+    margin: 0;
+}
+
 .contact_icon {
-    text-align: right;
+    width: auto;
+    height: 64px;
 }
 .past-rebuilds {
     box-sizing:border-box;
@@ -226,9 +242,9 @@ nav a:hover {
 footer {
     background-color:var(--accent1-color);
     color:var(--primary-color);
-    font-size: 1em;
-    padding: 25px 50px;
-    margin-top: 200px;
+    font-size: 0.5em;
+    padding: 25px;
+    margin-top: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
