--- a/second-chance/styles/style.css
+++ b/second-chance/styles/style.css
@@ -1,11 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
-/* Changes Needed:
-Make website responsive (screen sizes wide/small), 
-Add clickable expansion to image courosel*/
-
-
 * {
     box-sizing: border-box;
 }
@@ -28,7 +23,7 @@ body {
     padding: 0;
 }
 h1, h2 {
-    font: 1.5em 'Kanit';
+    font: 1.25em 'Kanit';
     text-align: center;
     height: auto;
     margin: 0;
@@ -95,14 +90,15 @@ nav a:hover {
 
 .first_impression img {
     width: 80%;
+    height: 100%;
 }
 
 .first_impression p {
     width: 50%;
     text-align: center;
     align-self: center;
-    line-height: 36px;
-    font-size: 28px;
+    line-height: 1em;
+    font-size: 0.70em;
 }
 
 .jeeps_main {
@@ -110,8 +106,8 @@ nav a:hover {
     flex-wrap: wrap;
     justify-content: space-around;
 }
-.karma_moab, .sabotage_moab {
-    width: 48vw;
+.jeeps_main img {
+    max-width: 48%;
     object-fit: cover;
     border: 10px solid var(--accent2-color);
 }
@@ -119,18 +115,19 @@ nav a:hover {
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-size: 0.75em;
-    justify-content: center;
+    font-size: 0.6em;
+    justify-content: space-around;
+    max-width: 100%;
     
 }
 
 .contact div {
     display: flex;
-    margin-right: 20px;
 }
 
 .contact p {
     margin: 0;
+    align-self: center;
 }
 
 .contact_icon {
@@ -157,13 +154,13 @@ nav a:hover {
 .prev, .next {
     cursor: pointer;
     position: absolute;
-    top: 50%;
+    top: 60%;
     width: auto;
     margin-top: -22px;
     padding: 16px;
     background-color: var(--primary-color);
     font-weight: bold;
-    font-size: 18px;
+    font-size: 0.5em;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
@@ -178,20 +175,15 @@ nav a:hover {
 }
 .text {
     color: var(--secondary-color);
-    background-color: var(--primary-color);
-    font-size: 15px;
+    font-size: 0.5em;
     padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
+    width: 90%;
     text-align: center;
+    align-items: center;
+    margin: auto;
+    grid-column: 1/3;
 }
 .numbertext {
-    /* color: var(--secondary-color);
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0; */
     display: none;
 }
 .dot {
@@ -212,30 +204,32 @@ nav a:hover {
     animation-duration: 1.5s;
 }
 
-#our_story h1 {
-    grid-column: 1/3;
-}
-#our_story {
+#story_page {
     margin: 50px;
+}
+
+#our_story {
     padding: 0;
-    display: grid;
-    grid-template-columns: 0.9fr 1.1fr;
+    display: flex;
+    flex-wrap: wrap;
     gap: 10px;
-    row-gap: 25px;
     justify-items: center;
     align-items: center;
+    justify-content: center;
 }
 #our_story img {
     max-width: 100%;
     height: auto;
     border: 10px solid var(--accent2-color);
+    margin-top: 10px;
 }
 .wide_img {
     width: 80%;
 }
 #our_story p {
     margin: -5px;
-    font-size: 26px;
+    text-align: left;
+    font-size: 0.70em;
     border: 10px solid var(--accent2-color);
     padding: 10px;
 }
@@ -243,11 +237,15 @@ footer {
     background-color:var(--accent1-color);
     color:var(--primary-color);
     font-size: 0.5em;
+    line-height: 0.75em;
     padding: 25px;
     margin-top: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+footer .social{
+    display: flex;
 }
 footer a {
     color:var(--primary-color);
@@ -256,7 +254,68 @@ footer a {
 footer a:hover{
     color:var(--accent2-color);
 }
+
 @keyframes fade {
     from {opacity: .4}
     to {opacity: 1}
+}
+
+@media screen and (max-width: 560px) {
+    body {
+        font-size: 24px;
+    }
+    .first_impression {
+        flex-direction: column-reverse;
+        padding: 0.5em;
+    }
+    .first_impression p {
+        width: 80%;
+    }
+    .jeeps_main img { 
+        border: 5px solid var(--accent2-color);
+    }
+    #our_story p {
+        border: 5px solid var(--accent2-color);
+        padding: 5px;
+    }
+    #our_story img {
+        border: 5px solid var(--accent2-color);
+    }
+    .prev, .next {
+        position: absolute;
+        top: 40%;
+    }
+    footer {
+        margin-top: 50px;
+    }
+}
+
+@media screen and (min-width: 560px) and (max-width: 960px){
+    body {
+        font-size: 28px
+    }
+    .first_impression {
+        flex-direction: column;
+        padding: 0.75em;
+    }
+    .first_impression p {
+        width: 80%;
+    }
+    .jeeps_main img { 
+        border: 7.5px solid var(--accent2-color);
+    }
+    #our_story p {
+        border: 7.5px solid var(--accent2-color);
+        padding: 7.5px;
+    }
+    #our_story img {
+        border: 7.5px solid var(--accent2-color);
+    }
+    .prev, .next {
+        position: absolute;
+        top: 50%;
+    }
+    footer {
+        margin-top: 75px;
+    }
 }
