--- a/second-chance/styles/style.css
+++ b/second-chance/styles/style.css
@@ -306,7 +306,7 @@ footer a:hover{
         font-size: 28px
     }
     .first_impression {
-        flex-direction: column;
+        flex-direction: column-reverse;
         padding: 0.75em;
     }
     .first_impression p {
