--- a/second-chance/styles/style.css
+++ b/second-chance/styles/style.css
@@ -276,7 +276,7 @@ footer a:hover{
         font-size: 24px;
     }
     .first_impression {
-        flex-direction: column-reverse;
+        flex-direction: column;
         padding: 0.5em;
     }
     .first_impression p {
@@ -306,7 +306,7 @@ footer a:hover{
         font-size: 28px
     }
     .first_impression {
-        flex-direction: column-reverse;
+        flex-direction: column;
         padding: 0.75em;
     }
     .first_impression p {
